// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/styles/NineBorderSlice BeforeElement smoke-test 1`] = `
<div class="_container1_139g0_9">
  <p>
    NineBorderSlice.stories
  </p>
</div>
`;

exports[`stories/styles/NineBorderSlice Normal smoke-test 1`] = `
<div class="_container_139g0_1">
  <p>
    NineBorderSlice.stories
  </p>
</div>
`;

exports[`stories/styles/NineBorderSlice Sizing smoke-test 1`] = `
<div class="_container_139g0_1 _sizingContainer_139g0_31">
  <p>
    NineBorderSlice.stories
  </p>
</div>
`;
